2006-12-06  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/lua/src/lua_style.c: (lua_style_prepare_cairo),
	(lua_style_draw_box):
	- Properly rotate and mirror some widgets.

2006-12-06  Daniel Borgmann <daniel.borgmann@gmail.com>

	* engines/lua/*:
	- Added Lua scripting engine.
	* configure.ac:
	- Added --enable-lua option to compile the lua engine.

2006-12-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_option), (clearlooks_style_draw_check):
	- C89 fixes (Bug #382704, Jens Granseuer)

2006-12-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Use @selected_fg_color for text[PRELIGHT] inside menus and
	for fg[PRELIGHT] in GtkProgressBar (Bug #382397, Michael Monreal)

2006-12-04  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.9.0

2006-12-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_tab), (clearlooks_register_style_glossy):
	- Added glossy tabs.

2006-12-04  Thomas Wood  <thos@gnome.org>

	* themes/Mist/gtk-2.0/gtkrc: Use gtk-color-scheme

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_radiobutton):
	- Don't draw the bullet in the inconsistent state.

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Draw Evolution ETree headers as headers instead of buttons.

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_frame): Support rounded corners correctly.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	- Set the corners correctly in the widget parameters
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tab):
	- Use the corners value from the parameters
